name:                lost-cities-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/lost-cities-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LostCities
  build-depends:       base >= 4.7 && < 5
                     , random-shuffle == 0.0.4
                     , MonadRandom == 0.3.0.2
                     , either == 4.3.4.1
                     , transformers-compat == 0.4.0.3
  default-language:    Haskell2010

test-suite lost-cities-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lost-cities-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/lost-cities-hs
